[Add] todo Repository

--- a/module-api/src/main/resources/application.yml
+++ b/module-api/src/main/resources/application.yml
@@ -1,1 +1,11 @@
 
+server:
+  tomcat:
+    max-swallow-size: 500MB
+  port: 8082
+  # shutdown: "graceful"
+
+spring:
+  profiles:
+    include: db
+
