--- a/module-storage/src/main/resources/application-db.yml
+++ b/module-storage/src/main/resources/application-db.yml
@@ -1,5 +1,9 @@
 
 spring:
+  config:
+    activate:
+      on-profile: db
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/todo?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
@@ -14,7 +18,7 @@ spring:
     hibernate:
       storage_engine: innodb
       jdbc.time_zone: UTC
-      ddl-auto: create
+      ddl-auto: update
       naming-strategy: org.hibernate.cfg.DefaultNamingStrategy
       dialect: org.hibernate.dialect.MySQLDialect
     properties:
