--- a/module-storage/src/main/resources/storage.yml
+++ b/module-storage/src/main/resources/storage.yml
@@ -1,26 +1,13 @@
 
 spring:
-  config:
-    activate:
-      on-profile: db
-
-  datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/todo?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=utf8
-    username: root
-    password: 1234
-    hikari:
-      maximum-pool-size: 2
-
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     open-in-view: false
     hibernate:
       storage_engine: innodb
       jdbc.time_zone: UTC
-      ddl-auto: create-drop
+      ddl-auto: create
       naming-strategy: org.hibernate.cfg.DefaultNamingStrategy
-      dialect: org.hibernate.dialect.MySQLDialect
     properties:
       hibernate.default_batch_fetch_size: 1000
       hibernate:
@@ -31,3 +18,20 @@ spring:
 #  datasource:
 #    p6spy:
 #      enable-logging: true
+
+---
+
+
+
+spring:
+  config:
+    activate:
+      on-profile: local
+
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:~/test
+    username: sa
+    password: 1234
+    hikari:
+      maximum-pool-size: 2
